apps/argocd/base/identity/authentik/app/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: identity
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
